refactor to class

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <link rel="stylesheet" href="styles/styles.css">
 <body>
   <div class="wrapper">
-    <div data-widget="dice"></div> 
+    <div data-widget="dice" data-dot-color="red"></div> 
+    <div data-widget="dice" data-dot-color="black"></div> 
+    <div data-widget="dice" data-dot-color="blue"></div> 
+    <div data-widget="dice" data-dot-color="green"></div> 
+    <div data-widget="dice" data-dot-color="orange"></div> 
+    <div data-widget="dice" data-dot-color="purple"></div> 
   </div>
   <script src="src/js/dice.js"></script>
 </body>
